--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -1,1 +1,35 @@
-<p>user-list works!</p>
+<mat-form-field>
+  <input matInput (keyup)="applyFilter($event.target)" placeholder="Filter">
+</mat-form-field>
+<table matSort mat-table [dataSource]="dataSource" style="width: 100%">
+  <ng-container *ngFor="let key of userKeys">
+    <ng-container matColumnDef="{{key}}">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{key}}</th>
+      <td mat-cell *matCellDef="let user">{{user[key]}}</td>
+    </ng-container>
+  </ng-container>
+  <ng-container matColumnDef="detail">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>detail</th>
+    <td mat-cell *matCellDef="let user">
+      <a routerLink="{{user.id}}">detail</a>
+    </td>
+  </ng-container>
+  <ng-container matColumnDef="edit">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>edit</th>
+    <td mat-cell *matCellDef="let user">
+      <a routerLink="{{user.id}}/edit">edit</a>
+    </td>
+  </ng-container>
+  <ng-container matColumnDef="delete">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>delete</th>
+    <td mat-cell *matCellDef="let user">
+      <a routerLink="{{user.id}}/delete">delete</a>
+    </td>
+  </ng-container>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+</table>
+<mat-paginator showFirstLastButtons [pageSizeOptions]="pageSizeOptions">
+</mat-paginator>
+
+
