--- a/src/app/user/user-detail/user-detail.component.old.html
+++ b/src/app/user/user-detail/user-detail.component.old.html
@@ -42,19 +42,43 @@
   <br>
   <mat-form-field>
     <mat-label>Join Team</mat-label>
-    <mat-select multiple>
+    <mat-select multiple formControlName="join">
       <mat-select-trigger>custom trigger</mat-select-trigger>
       <mat-option value="team1">team1</mat-option>
       <mat-option value="team2">team2</mat-option>
       <mat-option value="team3">team3</mat-option>
     </mat-select>
   </mat-form-field>
+  <div formArrayName="teams">
+    <mat-form-field>
+      <mat-label>Teams</mat-label>
+      <input matInput formControlName="0">
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput formControlName="1">
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput formControlName="2">
+    </mat-form-field>
+  </div>
   <mat-progress-bar value="20"></mat-progress-bar>
   <mat-radio-group formControlName="sex">
     <mat-radio-button value="male">Male</mat-radio-button>
     <mat-radio-button value="female">Female</mat-radio-button>
   </mat-radio-group>
+  <div formGroupName="address">
+    <h3>address</h3>
+    <mat-form-field>
+      <mat-label>Enter your street</mat-label>
+      <input matInput type="text" formControlName="street">
+    </mat-form-field>
+    <br>
+    <mat-form-field>
+      <mat-label>Enter you city</mat-label>
+      <input matInput type="text" formControlName="city">
+    </mat-form-field>
+  </div>
   <div>
-    <button type="submit">保存</button>
+    <button type="submit" (click)="getValue()">保存</button>
   </div>
 </form>
